# rust-microservices

./: README.md
async_microservice/: Cargo.toml
async_microservice/src/: main.rs
hyper-microservice/: Cargo.toml
hyper-microservice/src/: main.rs
image-uploader/: Cargo.toml
image-uploader/src/: main.rs
random_microservice/: .gitignore  Cargo.toml
random_microservice/src/: main.rs
random_serde_microservice/: Cargo.toml
random_serde_microservice/src/: color.rs  main.rs
redis-time-series/: Cargo.toml
rust-pub-sub/: Cargo.toml
rust-pub-sub/src/: main.rs  messages.rs  redis_publisher.rs  redis_subscriber.rs
