[package]
name = "hyper-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# slab = "0.4"
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.15.0", features = ["full"] }
# lazy_static = "1.0"
# regex = "1.0"


