[package]
name = "random_serde_microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
futures = "0.1"
hyper = "0.12"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0" # allow derivative of serialize method to be auto
serde_json = " 1.0"
base64 = "0.9"
base64-serde = "0.3"
